Add good counter/bad counter APIs -Rearrange some tests -Update documentation
