# rest/pokemon.js
@@ -41,4 +41,11 @@ router.get('/:pokedex/evolutions', (req,res) => {
         .catch(err => res.status(500).json(err))
 })
 
+router.get('/:pokedex/effectiveness', (req,res) => {
+    var pogo = req.query.pogo === undefined ? undefined : req.query.pogo.toLowerCase() === 'true'
+    api.getEffectivenessAgainst(req.params.pokedex, pogo)
+        .then(effMap => res.status(200).json(effMap))
+        .catch(err => res.status(500).json(err))
+})
+
 module.exports = router
